--- a/src/components/shortcutsContainer.html
+++ b/src/components/shortcutsContainer.html
@@ -26,6 +26,13 @@
               </button>
             </td>
           </tr>
+          <tr data-bind="visible: player.highestRegion() > 0">
+            <td class="p-0">
+              <button class="btn btn-block btn-primary m-0" data-bind="css: {disabled: App.game.gameState == GameConstants.GameState.battleFrontier || App.game.gameState === GameConstants.GameState.dungeon}" onclick="MapHelper.openShipModal()">
+                  Dock
+              </button>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
