Text shadow style to text-light
And opacity to the close button

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -602,3 +602,11 @@ td.tight {
 .legend-item > span:before {
   content: "- ";
 }
+
+/* Crobat Fork */
+/* Notifications */
+#toaster .text-light,
+#toaster .text-light *{
+  text-shadow: 0px 0px 10px #000 !important;
+  opacity: 1;
+}
