Dungeon tiles size
280px

--- a/src/styles/dungeon.less
+++ b/src/styles/dungeon.less
@@ -1,6 +1,6 @@
 .tile {
   position: relative;
-  height: 45px;
+  /*height: 45px;*/
   border: 1px solid black;
   margin: 1px;
   cursor: pointer;
@@ -111,4 +111,9 @@
     left: -10px;
     width: 35%;
   }
+}
+
+/* Crobat Fork */
+.dungeon-board {
+  height:280px !important;
 }
