--- a/src/components/townView.html
+++ b/src/components/townView.html
@@ -85,11 +85,12 @@
             <img class="lock" src="assets/images/breeding/lock.svg" data-bind="
             hidden: !$data.lock,
             tooltip: {
-                title: 'Try progressing in the story, catching new Pokémon, or talking to the locals!',
+                title: $data.lockMessage,
                 html: true,
                 placement: 'bottom',
                 trigger: 'hover'
             }">
+            <!-- title: 'Try progressing in the story, catching new Pokémon, or talking to the locals!', -->
           </li>
           <!-- /ko -->
           <!--Display all available bosses in this dungeon-->
@@ -101,11 +102,12 @@
             <sup class="shiny" data-bind="visible: $data.shiny">✨</sup>
             <img class="lock" src="assets/images/breeding/lock.svg" data-bind="hidden: !$data.lock,
             tooltip: {
-                title: 'Try progressing in the story, catching new Pokémon, or talking to the locals!',
+                title: $data.lockMessage,
                 html: true,
                 placement: 'bottom',
                 trigger: 'hover'
             }">
+            <!-- title: 'Try progressing in the story, catching new Pokémon, or talking to the locals!', -->
           </li>
           <!-- /ko -->
         </ul>
