Bootstrap sort icons
Added as game constants

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -602,3 +602,10 @@ td.tight {
 .legend-item > span:before {
   content: "- ";
 }
+
+/* Crobat Fork */
+/* Sort Icons */
+.sort-icons{
+  display: flex;
+  align-items: center;
+}
