--- a/src/components/achievementsModal.html
+++ b/src/components/achievementsModal.html
@@ -46,10 +46,10 @@ aria-labelledby="AchievementsModalLabel" aria-hidden="true">
                                             <option data-bind="text: $data.text, value: $data.value"></option>
                                         </select>
                                         <div class="input-group-append bg-primary text-light">
-                                            <label for="achievementSortDirection" class="clickable m-0 pl-2 pr-2" style="font-size: 22px;" data-bind="
-                                            text: Settings.getSetting('achievementSortDirection').observableValue() ? '⥄' : '⥂',
+                                            <label for="achievementSortDirection" class="clickable m-0 pl-2 pr-2 sort-icons" style="font-size: 22px;" data-bind="
+                                            html: Settings.getSetting('achievementSortDirection').observableValue() ? GameConstants.ICON_SORT_DOWN : GameConstants.ICON_SORT_UP,
                                             tooltip: { title: Settings.getSetting('achievementSortDirection').observableValue() ? 'Descending (highest value first)' : 'Ascending (lowest value first)', trigger: 'hover', placement:'top', html: true }
-                                            ">⥂</label>
+                                            ">⥄⥂</label>
                                             <input id="achievementSortDirection" style="vertical-align: middle" class="hidden" type='checkbox'
                                                    data-bind="checked: Settings.getSetting('achievementSortDirection').observableValue()"
                                                    onchange="Settings.setSettingByName('achievementSortDirection', this.checked)"/>
