--- a/src/components/pokemonListContainer.html
+++ b/src/components/pokemonListContainer.html
@@ -11,12 +11,12 @@
             <div class="input-group-append bg-primary text-light">
                 <label
                     for="partySortDirection"
-                    class="clickable m-0 pl-2 pr-2"
+                    class="clickable m-0 pl-2 pr-2 sort-icons"
                     style="font-size: 22px;"
                     data-bind="
-                        text: Settings.getSetting('partySortDirection').observableValue() ? '⥄' : '⥂',
+                        html: Settings.getSetting('partySortDirection').observableValue() ? GameConstants.ICON_SORT_DOWN : GameConstants.ICON_SORT_UP,
                         tooltip: { title: Settings.getSetting('partySortDirection').observableValue() ? 'Descending (highest value first)' : 'Ascending (lowest value first)', trigger: 'hover', placement:'top', html: true }"
-                >⥂</label>
+                >⥄⥂</label>
                 <input
                     id="partySortDirection"
                     style="vertical-align: middle"
