Pokedex width and rare hold item icon
Pokemon name placeholder also

--- a/src/styles/pokedex.less
+++ b/src/styles/pokedex.less
@@ -49,3 +49,13 @@
   filter: brightness(0.5) grayscale(1);
   opacity: 0.6;
 }
+
+/* Crobat Fork */
+.pokedex-modal {
+  max-width: 950px!important;
+}
+.pokedexEntry .item-icon{
+  padding: 2px;
+  margin: 16px 0;
+  background:rgba(0, 0, 0, 0.5);
+}
