--- a/src/components/pokedex.html
+++ b/src/components/pokedex.html
@@ -1,6 +1,6 @@
 <div class="modal noselect" id="pokedexModal" tabindex="-1" role="dialog"
 aria-labelledby="pokedexModalLabel">
-<div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
+<div class="modal-dialog modal-dialog-scrollable modal-lg pokedex-modal" role="document">
    <div class="modal-content">
        <div class="modal-header">
            <h4 style="margin-bottom: 0">Pokédex</h4>
@@ -17,7 +17,7 @@ aria-labelledby="pokedexModalLabel">
                         <!--Name-->
                         <div class="form-group col-md-6 col-6">
                             <label>Name</label>
-                            <input id="nameFilter" class="form-control" placeholder="Bulbasaur" value=""
+                            <input id="nameFilter" class="form-control" placeholder="Crobat" value=""
                                    oninput="PokedexHelper.updateList()">
                         </div>
 
@@ -105,6 +105,9 @@ aria-labelledby="pokedexModalLabel">
                         <span class="id" style="top: 0; border-top-left-radius: 6px; border-top-right-radius: 6px;" data-bind="text: ($data.id > 0 ? Math.floor($data.id) + '' : '???').padStart(3, 0)">number</span>
                             <div data-bind="visible: App.game.party.alreadyCaughtPokemonByName(name)" style="position: absolute;right: 2px;top: -15px;">
                                 <img width="18px" src="" data-bind="attr: { src: `assets/images/pokeball/Pokeball${App.game.party.alreadyCaughtPokemon($data.id, true) ? '-shiny' : ''}.svg`}"/>
+                            </div>
+                            <div style="position: absolute;right: 2px;top: 49px;">
+                                <img class="item-icon rounded-circle" src="" width="24px" data-bind="visible: BagHandler.displayName($data.heldItem) && App.game.party.alreadyCaughtPokemonByName(name), attr: {src: BagHandler.image($data.heldItem)}">
                             </div>
                             <!-- ko ifnot: App.game.party.getPokemon($data.id) == undefined -->
                             <div data-bind="if: App.game.party.alreadyCaughtPokemonByName(name) && App.game.party.getPokemon($data.id)?.pokerus" style="position: absolute;left: 2px;top: -11px;">
