--- a/src/components/battleFrontierInfo.html
+++ b/src/components/battleFrontierInfo.html
@@ -14,6 +14,7 @@
             When you are ready, click Start!<br/>
             <i>Note: there is no click damage in the Battle Frontier.</i>
         </p>
+        <h5 data-bind="text: `Highest Stage: ${App.game.statistics.battleFrontierHighestStageCompleted()}`"></h5>
         <a class="btn btn-block btn-success text-light" onclick="BattleFrontierRunner.start(false)">Start</a>
         <!-- ko if: BattleFrontierRunner.hasCheckpoint() -->
             <a class="btn btn-block btn-success text-light" onclick="BattleFrontierRunner.start(true)">Start at latest checkpoint (Stage <knockout data-bind="text: BattleFrontierRunner.checkpoint">0</knockout>)</a>
