--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -659,3 +659,10 @@ td.tight {
   display: flex;
   align-items: center;
 }
+/* Gender Icons */
+.gender-icon-female{
+  color:#F6807A;
+}
+.gender-icon-male{
+  color:#499FFF;
+}
