--- a/src/components/battleFrontierView.html
+++ b/src/components/battleFrontierView.html
@@ -8,7 +8,7 @@
             </knockout>
 
             <knockout>
-                <knockout data-bind="text: BattleFrontierBattle.enemyPokemon().name">Pokémon name</knockout>
+                <knockout data-bind="html: BattleFrontierBattle.enemyPokemon().name + ' ' + PokemonFactory.genderText(Battle.enemyPokemon().gender)">Pokémon name</knockout>
             </knockout>
 
             <knockout class="right" data-bind="html: BattleFrontierRunner.pokemonLeftImages">
