--- a/src/components/gymView.html
+++ b/src/components/gymView.html
@@ -8,7 +8,7 @@
             </knockout>
 
             <knockout>
-                <knockout data-bind="text: GymBattle.enemyPokemon().name">Pokémon name</knockout>
+                <knockout data-bind="html: GymBattle.enemyPokemon().name + ' ' + PokemonFactory.genderText(Battle.enemyPokemon().gender)">Pokémon name</knockout>
             </knockout>
 
             <knockout class="right">
