Gender logic for Pokémon sprites
>Route, dungeons, Battle Frontier, dungeon trainers, gyms
>Added gender type to MissingNo., ??? (Nihilego) and Mega Rayquaza
>More constants

--- a/src/components/battleFrontierView.html
+++ b/src/components/battleFrontierView.html
@@ -27,7 +27,7 @@
 
         <div>
             <img class="enemy"
-                    data-bind="attr:{ src: PokemonHelper.getImage(BattleFrontierBattle.enemyPokemon(), BattleFrontierBattle.enemyPokemon().shiny) }"
+                    data-bind="attr:{ src: PokemonHelper.getImage(BattleFrontierBattle.enemyPokemon(), BattleFrontierBattle.enemyPokemon().shiny, Battle.enemyPokemon().gender) }"
                     src=""/>
         </div>
         <div class="progress hitpoints" style="height: 20px;">
