--- a/src/components/dungeonView.html
+++ b/src/components/dungeonView.html
@@ -71,7 +71,7 @@
             <div>
                 <div data-bind="ifnot: DungeonBattle.catching">
                     <img class="enemy"
-                         data-bind="attr:{ src: PokemonHelper.getImage(DungeonBattle.enemyPokemon(), DungeonBattle.enemyPokemon().shiny) }"
+                         data-bind="attr:{ src: PokemonHelper.getImage(DungeonBattle.enemyPokemon(), DungeonBattle.enemyPokemon().shiny, Battle.enemyPokemon().gender) }"
                          src=""/>
                 </div>
                 <div data-bind="if: DungeonBattle.catching" class="catchChance">
