--- a/src/components/gymView.html
+++ b/src/components/gymView.html
@@ -42,7 +42,7 @@
             <!-- TODO: Add after all Gym Leader images are formatted correctly (same sizes, style etc)
             <img style="position:absolute; left:65%; top: 64px; height: 64px" data-bind="attr:{ src: GymBattle.gym.imagePath }" onerror="this.src = 'assets/images/transparent.png'"/>
             -->
-            <img class="enemy" data-bind="attr:{ src: PokemonHelper.getImage(GymBattle.enemyPokemon(), GymBattle.enemyPokemon().shiny) }" src=""/>
+            <img class="enemy" data-bind="attr:{ src: PokemonHelper.getImage(GymBattle.enemyPokemon(), GymBattle.enemyPokemon().shiny, Battle.enemyPokemon().gender) }" src=""/>
         </div>
 
         <div class="progress hitpoints" style="height: 20px;">
