--- a/src/components/temporaryBattleView.html
+++ b/src/components/temporaryBattleView.html
@@ -39,7 +39,7 @@
         </div>
 
         <div>
-            <img class="enemy" data-bind="attr:{ src: PokemonHelper.getImage(TemporaryBattleBattle.enemyPokemon(), TemporaryBattleBattle.enemyPokemon().shiny) }" src=""/>
+            <img class="enemy" data-bind="attr:{ src: PokemonHelper.getImage(TemporaryBattleBattle.enemyPokemon(), TemporaryBattleBattle.enemyPokemon().shiny, Battle.enemyPokemon().gender) }" src=""/>
         </div>
 
         <div class="progress hitpoints" style="height: 20px;">
