Pokedex layout changes
* Shows only 50 pokemon, adds 50 more on scroll
* Option to load all pokemon
* Filters fixed on the left
* Pokedex modal wider
* Changed checkbox layout
* Pokemon shows normal color instead shiny at first
* hideShinyImages > toggleAllShiny
* Added tooltip to some filters/settings

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -666,3 +666,12 @@ td.tight {
 .gender-icon-male{
   color:#499FFF;
 }
+
+/* Show collapsed div in desktop (Pokedex and hatchery) */
+@media (min-width: 768px) {
+  .collapse.dont-collapse-sm {
+    display: block !important;
+    height: auto !important;
+    visibility: visible;
+  }
+}
