--- a/src/components/pokedex.html
+++ b/src/components/pokedex.html
@@ -4,16 +4,18 @@ aria-labelledby="pokedexModalLabel">
    <div class="modal-content">
        <div class="modal-header">
            <h4 style="margin-bottom: 0">Pokédex</h4>
-           <button style="float:right;" class="btn btn-secondary" type="button" data-toggle="collapse"
-                   data-target="#pokedex-filter-container" aria-expanded="false" aria-controls="pokedex-filter-container">
+           <button style="float:right;" class="btn btn-secondary d-block d-md-none" type="button" data-toggle="collapse"
+                   data-target="#pokedex-filter-collapse" aria-expanded="false" aria-controls="pokedex-filter-collapse">
                Filters
            </button>
        </div>
-       <div class="modal-body">
-            <div class="collapse" id="pokedex-filter-container">
-                <div class="container-fluid" style="border-bottom: 1px solid #eceeef">
+       <div class="modal-body row mx-0">
+            <div class="col-md-3 collapse dont-collapse-sm" id="pokedex-filter-collapse">
+                <div class="w-100 mb-2" style="border-bottom: 1px solid #eceeef">
+                    <h4>Filters and Settings</h4>
+                </div>
+                <div class="container-fluid pl-0" id="pokedex-filter-container">
                     <div class="form-row text-left">
-
                         <!--Name-->
                         <div class="form-group col-md-6 col-6">
                             <label>Name</label>
@@ -32,14 +34,14 @@ aria-labelledby="pokedexModalLabel">
 
                         <!--Types-->
                         <div class="form-group col-md-6 col-6">
-                            <label>Type</label>
+                            <label>Types</label>
                             <select id="pokedex-filter-type1" class="custom-select"
                                     oninput="PokedexHelper.updateList()" style="margin-right: 8px">
                                 <option value="" selected>All</option>
                             </select>
                         </div>
                         <div class="form-group col-md-6 col-6">
-                            <label>Type</label>
+                            <label> </label>
                             <select id="pokedex-filter-type2" class="custom-select"
                                     oninput="PokedexHelper.updateList()">
                                 <option value="" selected>All</option>
@@ -65,76 +67,120 @@ aria-labelledby="pokedexModalLabel">
                                 <!-- /ko -->
                             </select>
                         </div>
-                        <div class="form-group col-md-6 col-6">
-                            <!--Rare Hold Item-->
-                            <div class="col-12">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" id="pokedex-filter-held-item"
-                                            value="false" onclick="PokedexHelper.updateList()"> Rare Hold Item
-                                </label>
-                            </div>
-                            <!--Hide shiny images-->
-                            <div class="col-12">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" id="pokedex-filter-held-item"
-                                        data-bind="checked: PokedexHelper.hideShinyImages"> Hide shiny image
-                                </label>
-                            </div>
-                            <!--Hide alternate forms-->
-                            <div class="col-12">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" id="pokedex-filter-hide-alternate"
-                                            value="false" onclick="PokedexHelper.updateList()"> Hide alternate forms
-                                </label>
-                            </div>
+                        <!-- Rare Hold Item -->
+                        <div class="form-group col-md-9 col-6">
+                            <span>Rare Hold Item</span>
+                            <i class="bi bi-question-circle mx-1" data-bind="tooltip: { title: 'Filters Pokémon with a chance to drop an item', trigger: 'hover' }"></i>
                         </div>
-
-                   </div>
-
-                   <div class="row justify-content-center">
-                      <h4 data-bind="text: `Showing ${PokedexHelper.filteredList().length} Pokémon`"></h4>
+                        <div class="form-group col-md-3 col-6">
+                            <label class="form-check-label toggler-wrapper style-1 float-right">
+                                <input class="form-check-input" type="checkbox" id="pokedex-filter-held-item"
+                                        value="false" onclick="PokedexHelper.updateList()">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+                        </div>
+                        <!--Hide alternate forms-->
+                        <div class="form-group col-md-9 col-6">
+                            <span>Alternate forms</span>
+                            <i class="bi bi-question-circle mx-1" data-bind="tooltip: { title: 'Filters all alternate forms out', trigger: 'hover' }"></i>
+                        </div>
+                        <div class="form-group col-md-3 col-6">
+                            <label class="form-check-label toggler-wrapper style-1 float-right">
+                                <input class="form-check-input" type="checkbox" id="pokedex-filter-hide-alternate"
+                                        value="false" onclick="PokedexHelper.updateList()">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="col-12">
+                            <hr style="margin-top:0; border-color:white;"/>
+                        </div>
+                        <!-- Show/Hide Shiny images -->
+                        <div class="form-group col-md-9 col-6">
+                            <span>Shiny images</span>
+                            <i class="bi bi-question-circle mx-1" data-bind="tooltip: { title: 'Shows Shiny image of Pokémon with its Shiny variant unlocked', trigger: 'hover' }"></i>
+                        </div>
+                        <div class="form-group col-md-3 col-6">
+                            <label class="form-check-label toggler-wrapper style-1 float-right">
+                                <input class="form-check-input" type="checkbox" id="pokedex-filter-held-item"
+                                    data-bind="checked: PokedexHelper.toggleAllShiny">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+                        </div>
+                        <!-- Load all Pokémon -->
+                        <div class="form-group col-md-9 col-6">
+                            <span>Load all Pokémon</span>
+                            <i class="bi bi-question-circle mx-1" data-bind="tooltip: { title: 'Loads all the Pokémon (By default, Pokédex shows 50 Pokémon at first and loads 50 more the more you scroll)', trigger: 'hover' }"></i>
+                        </div>
+                        <div class="form-group col-md-3 col-6">
+                            <label class="form-check-label toggler-wrapper style-1 float-right">
+                                <input class="form-check-input" type="checkbox" id="pokedex-filter-show-all"
+                                    data-bind="checked: false">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+                        </div>
                    </div>
                </div>
 
-           </div>
-           <div>
-               <ul class="row justify-content-center p-0" data-bind="foreach: PokedexHelper.filteredList()"
-                   style="max-width: 100%; padding:0; margin:0;">
-                   <li class="col-sm-4 col-md-3 col-lg-2 pokedexEntry"
-                        data-bind="style:{background: PokedexHelper.getBackgroundColors($data.name)}">
-                        <span class="id" style="top: 0; border-top-left-radius: 6px; border-top-right-radius: 6px;" data-bind="text: ($data.id > 0 ? Math.floor($data.id) + '' : '???').padStart(3, 0)">number</span>
-                            <div data-bind="visible: App.game.party.alreadyCaughtPokemonByName(name)" style="position: absolute;right: 2px;top: -15px;">
-                                <img width="18px" src="" data-bind="attr: { src: `assets/images/pokeball/Pokeball${App.game.party.alreadyCaughtPokemon($data.id, true) ? '-shiny' : ''}.svg`}"/>
-                            </div>
-                            <div style="position: absolute;right: 2px;top: 49px;">
-                                <img class="item-icon rounded-circle" src="" width="24px" data-bind="visible: BagHandler.displayName($data.heldItem) && App.game.party.alreadyCaughtPokemonByName(name), attr: {src: BagHandler.image($data.heldItem)}">
-                            </div>
-                            <!-- ko ifnot: App.game.party.getPokemon($data.id) == undefined -->
-                            <div data-bind="if: App.game.party.alreadyCaughtPokemonByName(name) && App.game.party.getPokemon($data.id)?.pokerus" style="position: absolute;left: 2px;top: -11px;">
-                                <img width="32px" src="" data-bind="attr: { src: `assets/images/breeding/pokerus/${GameConstants.Pokerus[App.game.party.getPokemon($data.id)?.pokerus]}.png`}"/>
-                            </div>
-                            <!-- /ko -->
-                            <img src="" width="80px" data-bind="css: { 'pokemon-not-seen': !PokedexHelper.pokemonSeen($data.id)(), 'pokemon-seen-but-not-caught': !App.game.party.alreadyCaughtPokemonByName(name) && PokedexHelper.pokemonSeen($data.id)() }, attr:{ src: PokedexHelper.getImage($data.id)}">
-                            <!-- ko if: PokedexHelper.pokemonSeen($data.id) -->
-                            <span style="bottom: 0; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px" data-bind="text: $data.name">name</span>
-                            <a class="overlay" href="#pokemonStatisticsModal" data-toggle="modal" data-bind="click: () => {App.game.statistics.selectedPokemonID($data.id)},
-                                tooltip: {
-                                    html: true,
-                                    title: `<u>Information:</u>
-                                        <br/>Base Attack: <strong>${$data.attack}</strong>
-                                        <br/>Catch Rate: <strong>${PokemonFactory.catchRateHelper($data.catchRate, true)}%</strong>
-                                        <br/>Hatch Steps: <strong>${App.game.breeding.getSteps($data.eggCycles).toLocaleString('en-US')}</strong>` +
-                                        (App.game.party.getPokemon($data.id)?.pokerus >= GameConstants.Pokerus.Contagious ?
-                                            `<br/>EVs: <strong>${App.game.party.getPokemon($data.id).evs().toLocaleString('en-US')}</strong>
-                                            <br/>EV bonus: <strong>×${App.game.party.getPokemon($data.id).calculateEVAttackBonus().toLocaleString('en-US')}</strong>`
-                                            : ''),
-                                    trigger: 'hover',
-                                    placement:'bottom'
-                                }"></a>
-                            <!-- /ko -->
-                   </li>
-               </ul>
-           </div>
+            </div>
+            <div class="col-md-9">
+                <!-- ko if: PokedexHelper.shortenedListByIndex().length == 0 -->
+                <div class="row justify-content-center w-100 mb-2" style="border-bottom: 1px solid #eceeef">
+                    <h4 data-bind="text: 'No Pokémon found'"></h4>
+                </div>
+                <span>Missing a Pokémon but is not appearing here? Look around the region, you haven't seen yet.</span>
+                <!-- /ko -->
+                <!-- ko if: PokedexHelper.shortenedListByIndex().length != 0 -->
+                <div class="row justify-content-center w-100 mb-2" style="border-bottom: 1px solid #eceeef">
+                    <h4 data-bind="text: `Showing ${PokedexHelper.filteredList().length} Pokémon`"></h4>
+                </div>
+                <!-- /ko -->
+                <div id="pokemon-list">
+                    <ul class="row justify-content-center p-0" id="pokemon-elements" data-bind="foreach: PokedexHelper.shortenedListByIndex()"
+                        style="max-width: 100%; padding:0; margin:0;">
+                        <li class="col-sm-4 col-md-3 col-lg-2 pokedexEntry"
+                                data-bind="style:{background: PokedexHelper.getBackgroundColors($data.name)}">
+                                <span class="id" style="top: 0; border-top-left-radius: 6px; border-top-right-radius: 6px;" data-bind="text: ($data.id > 0 ? Math.floor($data.id) + '' : '???').padStart(3, 0)">number</span>
+                                    <div data-bind="visible: App.game.party.alreadyCaughtPokemonByName(name)" style="position: absolute;right: 2px;top: -15px;">
+                                        <img width="18px" src="" data-bind="attr: { src: `assets/images/pokeball/Pokeball${App.game.party.alreadyCaughtPokemon($data.id, true) ? '-shiny' : ''}.svg`}"/>
+                                    </div>
+                                    <div style="position: absolute;right: 2px;top: 49px;">
+                                        <img class="item-icon rounded-circle" src="" width="24px" data-bind="visible: BagHandler.displayName($data.heldItem) && App.game.party.alreadyCaughtPokemonByName(name), attr: {src: BagHandler.image($data.heldItem)}">
+                                    </div>
+                                    <!-- ko ifnot: App.game.party.getPokemon($data.id) == undefined -->
+                                    <div data-bind="if: App.game.party.alreadyCaughtPokemonByName(name) && App.game.party.getPokemon($data.id)?.pokerus" style="position: absolute;left: 2px;top: -11px;">
+                                        <img width="32px" src="" data-bind="attr: { src: `assets/images/breeding/pokerus/${GameConstants.Pokerus[App.game.party.getPokemon($data.id)?.pokerus]}.png`}"/>
+                                    </div>
+                                    <!-- /ko -->
+                                    <img src="" width="80px" data-bind="css: { 'pokemon-not-seen': !PokedexHelper.pokemonSeen($data.id)(), 'pokemon-seen-but-not-caught': !App.game.party.alreadyCaughtPokemonByName(name) && PokedexHelper.pokemonSeen($data.id)() }, attr:{ src: PokedexHelper.getImage($data.id)}">
+                                    <!-- ko if: PokedexHelper.pokemonSeen($data.id) -->
+                                    <span style="bottom: 0; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px" data-bind="text: $data.name">name</span>
+                                    <a class="overlay" href="#pokemonStatisticsModal" data-toggle="modal" data-bind="click: () => {App.game.statistics.selectedPokemonID($data.id)},
+                                        tooltip: {
+                                            html: true,
+                                            title: `<u>Information:</u>
+                                                <br/>Base Attack: <strong>${$data.attack}</strong>
+                                                <br/>Catch Rate: <strong>${PokemonFactory.catchRateHelper($data.catchRate, true)}%</strong>
+                                                <br/>Hatch Steps: <strong>${App.game.breeding.getSteps($data.eggCycles).toLocaleString('en-US')}</strong>` +
+                                                (App.game.party.getPokemon($data.id)?.pokerus >= GameConstants.Pokerus.Contagious ?
+                                                    `<br/>EVs: <strong>${App.game.party.getPokemon($data.id).evs().toLocaleString('en-US')}</strong>
+                                                    <br/>EV bonus: <strong>×${App.game.party.getPokemon($data.id).calculateEVAttackBonus().toLocaleString('en-US')}</strong>`
+                                                    : ''),
+                                            trigger: 'hover',
+                                            placement:'bottom'
+                                        }"></a>
+                                    <!-- /ko -->
+                        </li>
+                    </ul>
+                </div>
+            </div>
        </div>
 
        <div class="modal-footer">
