--- a/src/components/pokedex.html
+++ b/src/components/pokedex.html
@@ -95,6 +95,20 @@ aria-labelledby="pokedexModalLabel">
                                 </div>
                             </label>
                         </div>
+                        <!-- Gender differences -->
+                        <div class="form-group col-md-9 col-6">
+                            <span>Gender differences</span>
+                            <i class="bi bi-question-circle mx-1" data-bind="tooltip: { title: 'Filters all Pokémon with gender differences', trigger: 'hover' }"></i>
+                        </div>
+                        <div class="form-group col-md-3 col-6">
+                            <label class="form-check-label toggler-wrapper style-1 float-right">
+                                <input class="form-check-input" type="checkbox" id="pokedex-filter-gender-diff"
+                                    value="false" onclick="PokedexHelper.updateList()">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+                        </div>
                         <div class="col-12">
                             <hr style="margin-top:0; border-color:white;"/>
                         </div>
@@ -107,6 +121,20 @@ aria-labelledby="pokedexModalLabel">
                             <label class="form-check-label toggler-wrapper style-1 float-right">
                                 <input class="form-check-input" type="checkbox" id="pokedex-filter-held-item"
                                     data-bind="checked: PokedexHelper.toggleAllShiny">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+                        </div>
+                        <!-- Show/Hide Female images -->
+                        <div class="form-group col-md-9 col-6">
+                            <span>Female images</span>
+                            <i class="bi bi-question-circle mx-1" data-bind="tooltip: { title: 'Shows female image of Pokémon with gender differences', trigger: 'hover' }"></i>
+                        </div>
+                        <div class="form-group col-md-3 col-6">
+                            <label class="form-check-label toggler-wrapper style-1 float-right">
+                                <input class="form-check-input" type="checkbox" id="pokedex-filter-held-item"
+                                    data-bind="checked: PokedexHelper.toggleFemale">
                                 <div class="toggler-slider">
                                     <div class="toggler-knob"></div>
                                 </div>
