Fix .tight class

--- a/src/components/pokemonStatisticsModal.html
+++ b/src/components/pokemonStatisticsModal.html
@@ -37,7 +37,7 @@
                   <!-- /ko -->
                 </div>
               </div>
-                <table class="table table-striped table-hover table-bordered table-sm m-0">
+                <table class="table table-striped table-hover table-bordered table-sm m-0 pkmn-statistics-table">
                   <thead>
                     <tr class="text-light">
                       <th class="text-left bg-dark">Pokémon Skills</th>
