--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -528,7 +528,7 @@ img.fit-width {
 }
 
 td.tight {
-  width: 150px; /* Original: 1px */
+  width: 1px;
   white-space: nowrap;
 }
 
@@ -674,4 +674,9 @@ td.tight {
     height: auto !important;
     visibility: visible;
   }
+}
+
+/* Pokémon statistics table */
+.pkmn-statistics-table td.tight{
+  width: 150px!important;
 }
