--- a/src/components/itemModal.html
+++ b/src/components/itemModal.html
@@ -18,57 +18,89 @@
                 </ul>
                 <div class="tab-content">
                     <div id="evoStones" class="tab-pane active p-3">
-                        <h3 data-bind="text: ItemList[ItemHandler.stoneSelected()].displayName"></h3>
-
-                        <div class="row justify-content-sm-center">
-                            <div class="row col-10" data-bind="foreach: Object.keys(GameConstants.StoneType).filter(stone => isNaN(stone) && stone !== 'None')">
-                                <div class="col-2" style="cursor: pointer"
-                                        data-bind="css:{'item-selected': ItemHandler.stoneSelected() === $data},
-                                            click: function(){ ItemHandler.stoneSelected($data); ItemHandler.pokemonSelected('')},
-                                            visible: ItemList[$data].unlockedRegion <= player.highestRegion() || player.amountOfItem($data) > 0">
-                                    <img data-bind="attr: {src: ItemList[$data].image }" style="max-width: 32px;">
-                                    <div data-bind="text: player._itemList[$data]().toLocaleString('en-US')"></div>
+                        <!--<h3 data-bind="text: ItemList[ItemHandler.stoneSelected()].displayName"></h3>-->
+                        <div class="row">
+                            <div class="col-12 d-md-none d-block">
+                                <button class="w-100 my-1 btn btn-secondary" type="button" data-toggle="collapse"
+                                        data-target="#evo-item-list" aria-expanded="false" aria-controls="evo-item-list">
+                                    Evolution Item
+                                </button>
+                            </div>
+                            <!-- Evo items -->
+                            <div class="col-md-6 col-12 collapse dont-collapse-sm justify-content-center" id="evo-item-list">
+                                <h4>Evolution Items</h4>
+                                <div class="scrolling-div" data-bind="foreach: Object.keys(GameConstants.StoneType).filter(stone => isNaN(stone) && stone !== 'None')">
+                                    <div class="col-12 breedingListItem">
+                                        <button class="btn btn-secondary smallButton list-group-item-action" style="cursor: pointer; padding-right:15px"
+                                                data-bind="css:{'item-selected': ItemHandler.stoneSelected() === $data},
+                                                    click: function(){ ItemHandler.stoneSelected($data); ItemHandler.pokemonSelected('')},
+                                                    visible: ItemList[$data].unlockedRegion <= player.highestRegion() || player.amountOfItem($data) > 0">
+                                            <img data-bind="attr: {src: ItemList[$data].image }" style="max-width: 32px; margin: -10px; padding: 12px 0px;">
+                                            <div class="d-inline-block" data-bind="text: ItemList[$data].displayName" style="margin-left: 20px; margin-top:8px;"></div>
+                                            <span data-bind="text: player._itemList[$data]().toLocaleString('en-US')" style="float:right; margin-top:8px;"></span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <hr/>
-
-                        <div class="row justify-content-sm-center" >
-                            <div class="row col-lg-11 offset-md-0"
-                                data-bind="foreach: PokemonHelper.getPokemonsWithEvolution(GameConstants.StoneType[ItemHandler.stoneSelected()])">
-                                <div class="col-md-6 col-sm-10 col-lg-4 offset-sm-1 offset-md-0 offset-md-0 breedingListItem">
-                                    <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
-                                            data-bind="click: function() {ItemHandler.pokemonSelected(name)}, css:{ 'pokemon-selected': ItemHandler.pokemonSelected() === name}">
-                                        <img class="smallImage" data-bind="attr:{src: 'assets/images/' + (App.game.party.alreadyCaughtPokemon($data.id, true) ? 'shiny' : '') + 'pokemon/' + id +'.png' }"/>
-                                        <span data-bind="text: name" style="margin-left: 20px">Name</span>
-
-                                        <span style="float:right; margin-top:8px"  data-bind="using: { statuses: PartyController.getStoneEvolutionsCaughtStatus($data.id, GameConstants.StoneType[ItemHandler.stoneSelected()]) }">
-                                            <div class="row" data-bind="foreach: statuses">
-                                                <div class="col-2" data-bind="template: { name: 'caughtStatusTemplate', data: { 'status': $data } }"></div>
+                            <div class="col-12 d-md-none d-block">
+                                <button class="w-100 my-1 btn btn-secondary" type="button" data-toggle="collapse"
+                                        data-target="#evo-pokemon-list" aria-expanded="false" aria-controls="evo-pokemon-list">
+                                    Pokémon
+                                </button>
+                            </div>
+                            <!-- Pokemon list -->
+                            <div class="col-md-6 col-12 collapse dont-collapse-sm justify-content-center" id="evo-pokemon-list">
+                                <h4>Pokémon</h4>
+                                <div class="scrolling-div"
+                                    data-bind="foreach: PokemonHelper.getPokemonsWithEvolution(GameConstants.StoneType[ItemHandler.stoneSelected()])">
+                                    <div class="col-md-6 col-sm-10 col-lg-12 breedingListItem"> <!--offset-sm-1 offset-md-0 offset-md-0 -->
+                                        <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
+                                                data-bind="click: function() {ItemHandler.pokemonSelected(name)}, css:{ 'pokemon-selected': ItemHandler.pokemonSelected() === name}">
+                                            <img class="smallImage" data-bind="attr:{src: 'assets/images/' + (App.game.party.alreadyCaughtPokemon($data.id, true) ? 'shiny' : '') + 'pokemon/' + id +'.png' }"/>
+                                            <div class="d-inline-block" data-bind="text: name" style="margin-left: 20px; margin-top: 8px;">Name</div>
+                                            <span style="float:right; margin-top:8px"  data-bind="using: { statuses: PartyController.getStoneEvolutionsCaughtStatus($data.id, GameConstants.StoneType[ItemHandler.stoneSelected()]) }">
+                                                <div class="row" data-bind="foreach: statuses">
+                                                    <div class="col-2" data-bind="template: { name: 'caughtStatusTemplate', data: { 'status': $data } }"></div>
+                                                </div>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- Amount buttons -->
+                            <div class="col-12 scrolling-div ">
+                                <div class="pt-3">
+                                    <i>Stops using evolution items once a shiny is encountered</i>
+                                </div>
+                                <!--
+                                // Since Pikachu and Exeggcute fix, random evolution is not possible anymore
+                                <div class="pt-3" data-bind="visible: PartyController.hasMultipleStoneEvolutionsAvailable(ItemHandler.pokemonSelected(), GameConstants.StoneType[ItemHandler.stoneSelected()])">
+                                    <i>If the requirements for more than one evolution is fulfilled, a random evolution will be selected</i>
+                                </div>
+                                -->
+                                <div class="row">
+                                    <div class="col-md-6 col-12">
+                                        <div class="row no-gutters justify-content-center">
+                                            <div class="row justify-content-center" style="padding:15px;"
+                                            data-bind="template: { 
+                                                name:'multiOptionTemplate', 
+                                                data: { observable: ItemHandler.amountSelected, 
+                                                    optionValues: [1,10,100,1000,Infinity] 
+                                                } 
+                                            }">
                                             </div>
-                                        </span>
-                                    </button>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-12">
+                                        <div class="row no-gutters justify-content-center">
+                                            <div class="row justify-content-center" style="padding:15px;">
+                                                <button data-bind="click: function(){ItemHandler.useStones()}" class="btn btn-lg btn-success">Use evolution items!</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-
-                        <hr/>
-
-                        <div class="row justify-content-center"
-                             data-bind="template: { name:'multiOptionTemplate',
-                                                    data: { observable: ItemHandler.amountSelected,
-                                                            optionValues: [1,10,100,1000,Infinity]
-                                                          }
-                                                  }">
-                        </div>
-                        <p><i>Stops using evolution items once a shiny is encountered</i></p>
-                        <p data-bind="visible: PartyController.hasMultipleStoneEvolutionsAvailable(ItemHandler.pokemonSelected(), GameConstants.StoneType[ItemHandler.stoneSelected()])">
-                            <i>If the requirements for more than one evolution is fulfilled, a random evolution will be selected</i>
-                        </p>
-                        <div class="row no-gutters justify-content-sm-center">
-                            <div class="row justify-content-center" style="padding:15px;">
-                                <button data-bind="click: function(){ItemHandler.useStones()}" class="btn btn-lg btn-success">Use evolution items!</button>
                             </div>
                         </div>
                     </div>
