Added gems efficiency link

--- a/src/components/gemsModal.html
+++ b/src/components/gemsModal.html
@@ -8,7 +8,11 @@
                         data-bind="tooltip: { title: 'Use gems to upgrade the type effectiveness of your Pokémon. When you defeat a Pokémon, you get gems based on its type.', trigger: 'hover', placement:'left' }">
                     ?
                 </button>
-
+            </div>
+            <div class="py-1">
+                <a href="https://docs.google.com/spreadsheets/d/1IxPh59_lNxZUa3Qo3r5ZbawGHL_nfqqd/edit#gid=1964739412" target="_blank">
+                    Best routes/gyms for Gem farming (for both Official and Crobat forks) by Anon
+                </a>
             </div>
             <div class="modal-body p-0">
                 <p data-bind="visible: App.game.challenges.list.disableGems.active()" class="bg-danger my-0 sticky-top">
