Pokeball Layout changes

--- a/src/styles/pokeball.less
+++ b/src/styles/pokeball.less
@@ -52,3 +52,20 @@
 #pokeballSelector .card-body span {
   line-height: 32px;
 }
+
+/* Crobat Fork */
+.pokeballListItem{
+  text-align: left;
+  margin-bottom: 3px;
+}
+.pokeballListItem img{
+  margin-left: 0px;
+  margin-right: -30px;
+}
+@media (min-width: 768px) {
+  .scrolling-div-pokeball {
+    overflow-y: auto;
+    max-height: calc(100vh - 280px);
+    min-height: 150px;
+  }
+}
