--- a/src/components/pokeballSelectorModal.html
+++ b/src/components/pokeballSelectorModal.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="pokeballSelectorModal" tabindex="-1" role="dialog"
   aria-labelledby="PokeballSelectorModal" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
+  <div class="modal-dialog modal-dialog-scrollable modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="pokeballSelectorModalLabel">Poké Ball Selection</h5>
@@ -9,85 +9,129 @@
         </button>
       </div>
       <div class="modal-body p-0">
-        <div class="row">
-          <!-- Poké Ball Selectors -->
-          <div class="col-md-6 col-12 collapse dont-collapse-sm justify-content-center" id="evo-item-list">
-            <h4>Selectors</h4>
-            <div class="scrolling-div" data-bind="foreach: App.game.pokeballs.pokeballSelectors">
-              <div class="col-12 breedingListItem">
-                <button class="btn btn-secondary smallButton list-group-item-action" style="cursor: pointer; padding-right:15px"
-                  data-bind="css:{'item-selected': App.game.pokeballs.selectedSelection() === $data.pokeball}, click: function(){ App.game.pokeballs.selectedSelection($data.pokeball) }">
-                  <img data-bind="attr: {src: '' }" style="max-width: 32px; margin: -10px; padding: 12px 0px;">
-                  <div class="d-inline-block" data-bind="text: $data.name" style="margin-left: 20px; margin-top:8px;"></div>
-                  <!--<span data-bind="text: player._itemList[$data]().toLocaleString('en-US')" style="float:right; margin-top:8px;"></span>-->
-                </button>
+        <div id="evoStones" class="p-3">
+          <div class="row">
+            <!-- Poké Ball Selectors -->
+            <div class="col-md-4 col-12 collapse dont-collapse-sm justify-content-center" id="evo-item-list">
+              <h4>Selectors</h4>
+              <div class="scrolling-div-pokeball" data-bind="foreach: App.game.pokeballs.pokeballSelectors">
+                <div class="col-12 pokeballListItem">
+                  <button class="btn btn-secondary smallButton list-group-item-action" style="cursor: pointer; padding-right:15px"
+                    data-bind="css:{'item-selected': App.game.pokeballs.selectedSelection() === $data.pokeball}, click: function(){ App.game.pokeballs.selectedSelection($data.pokeball) }">
+                    <img data-bind="attr: {src: '' }" style="max-width: 32px; margin: -10px; padding: 12px 0px;">
+                    <div class="d-inline-block" data-bind="text: $data.name" style="margin-left: 20px; margin-top:6px; margin-bottom:6px;"></div>
+                    <!--<span data-bind="text: player._itemList[$data]().toLocaleString('en-US')" style="float:right; margin-top:8px;"></span>-->
+                  </button>
+                </div>
               </div>
             </div>
-          </div>
 
-          <!-- Poké Balls -->
-          <div class="col-md-6 col-12 collapse dont-collapse-sm justify-content-center" id="evo-pokemon-list">
-            <h4>Pokémon</h4>
-            <div class="scrolling-div">
-              <div class="col-md-6 col-sm-10 col-lg-12 breedingListItem"> <!--offset-sm-1 offset-md-0 offset-md-0 -->
-                <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
-                data-bind="
-                click: function(){App.game.pokeballs.selectedSelection()(-1)},
-                css:{'item-selected': App.game.pokeballs.selectedSelection()() === -1}">
-                  <img class="smallImage" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[-1] + '.svg' }"/>
-                  <div class="d-inline-block" data-bind="text: name" style="margin-left: 20px; margin-top: 8px;">Name</div>
-                </button>
-              </div>
-              <!-- ko foreach: App.game.pokeballs.pokeballs -->
-              <div class="col-md-6 col-sm-10 col-lg-12 breedingListItem"> <!--offset-sm-1 offset-md-0 offset-md-0 -->
-                <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
-                data-bind="
-                click: function(){App.game.pokeballs.selectedSelection()($data.type)},
-                visible: $data.unlocked() || $data.quantity(),
-                css:{'item-selected': App.game.pokeballs.selectedSelection()() === $data.type}">
-                  <img class="smallImage" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[$data.type] + '.svg' }"/>
-                  <div class="d-inline-block" data-bind="text: name" style="margin-left: 20px; margin-top: 8px;">Name</div>
-                </button>
-              </div>
-              <!-- /ko -->
-            </div>
-          </div>
-        </div>
-
-
-
-
-
-
-
-
-
-        <div class="table-warning p-1 text-left" data-bind="text: App.game.pokeballs.selectedTitle"></div>
-        <div class="card-body p-0 show table-responsive text-left">
-          <table class="table table-sm m-0">
-            <thead>
-              <tr>
-                <th class="text-center" width="20%">Ball</th>
-                <th>Description</th>
-                <th class="text-center">Qty</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="clickable"
-                data-bind="template: { name: 'pokeballSelectionTemplate', data: { 'image': 'None', 'type': -1, 'description': 'Do not catch' }},
-                    click: function(){App.game.pokeballs.selectedSelection()(GameConstants.Pokeball.None)}"></tr>
-              <!-- ko foreach: App.game.pokeballs.pokeballs -->
-              <tr class="clickable"
-                data-bind="template: { name: 'pokeballSelectionTemplate', data: $data},
+            <!-- Poké Balls -->
+            <div class="col-md-4 col-12 collapse dont-collapse-sm justify-content-center" id="evo-pokemon-list">
+              <h4>Poké Balls</h4>
+              <div class="scrolling-div-pokeball">
+                <div class="col-md-6 col-sm-10 col-lg-12 pokeballListItem"> <!--offset-sm-1 offset-md-0 offset-md-0 -->
+                  <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
+                  data-bind="
+                  click: function(){App.game.pokeballs.selectedSelection()(-1)},
+                  css:{'item-selected': App.game.pokeballs.selectedSelection()() === -1}">
+                    <img class="pokeball-small pokeball-selected" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[-1] + '.svg' }, tooltip: {title: 'None', trigger: 'hover', animation: false, placement: 'bottom'}"/>
+                    <div class="d-inline-block" data-bind="text: 'None'" style="margin-left: 34px; margin-top: 8px;">Name</div>
+                    <i class="bi bi-question-circle mx-1"
+                        data-bind="tooltip: { title: 'Do not catch', trigger: 'hover', html: true }"></i>
+                    <span style="float:right; margin-top:8px;">-</span>
+                  </button>
+                </div>
+                <!-- ko foreach: App.game.pokeballs.pokeballs -->
+                <div class="col-md-6 col-sm-10 col-lg-12 pokeballListItem"> <!--offset-sm-1 offset-md-0 offset-md-0 -->
+                  <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
+                  data-bind="
                   click: function(){App.game.pokeballs.selectedSelection()($data.type)},
                   visible: $data.unlocked() || $data.quantity(),
-                  css: {
-                    'clickable': !($data.type === GameConstants.Pokeball.Masterball && App.game.challenges.list.disableMasterballs.active()),
-                    'disabled no-click text-muted': ($data.type === GameConstants.Pokeball.Masterball && App.game.challenges.list.disableMasterballs.active()),
-                  }"></tr>
-              <!-- /ko -->
-            </tbody>
-          </table>
+                  css:{'item-selected': App.game.pokeballs.selectedSelection()() === $data.type}">
+                    <img class="pokeball-small pokeball-selected" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[$data.type] + '.svg' }, tooltip: {title: $data.type === -1 ? 'None' : ItemList[GameConstants.Pokeball[$data.type]].displayName, trigger: 'hover', animation: false, placement: 'bottom'}"/>
+                    <div class="d-inline-block" data-bind="text: ItemList[GameConstants.Pokeball[$data.type]].displayName" style="margin-left: 34px; margin-top: 8px;">Name</div>
+                    <i class="bi bi-question-circle mx-1"
+                        data-bind="tooltip: { title: $data.type === -1 ? 'Do not catch' : $data.description, trigger: 'hover', html: true }"></i>
+                    <span data-bind="text: $data.quantity && $data.quantity() ? GameConstants.formatNumber($data.quantity()) : '-', tooltip: $data.quantity && { title: $data.quantity().toLocaleString('en-US'), trigger: 'hover', animation: false, placement: 'left' }" style="float:right; margin-top:8px;"></span>
+                  </button>
+                </div>
+                <!-- /ko -->
+              </div>
+            </div>
+
+            <!-- Settings -->
+            <div class="col-md-4 col-12 collapse dont-collapse-sm justify-content-center" id="evo-item-list">
+              <h4>Settings</h4>
+              <div class="scrolling-div-pokeball">
+                  <div class="col-12 pokeballListItem form-row">
+                      <!-- ko if: new TemporaryBattleRequirement('Anabel').isCompleted() -->
+                      <div class="form-group col-md-9 col-6">
+                        <span>Catch Ultra Beasts</span>
+                        <!--<img class="pokeball-small pokeball-selected" src="assets/images/pokeball/Beastball.svg">-->
+                        <i class="bi bi-question-circle mx-1"
+                        data-bind="tooltip: { title: 'Enable this option to catch Ultra Beasts', trigger: 'hover', html: true }"></i>
+                      </div>
+                      <div class="form-group col-md-3 col-6">
+                          <label class="form-check-label toggler-wrapper style-1 float-right">
+                              <input class="form-check-input" type="checkbox" id="pokeball-catch-ub"
+                                  data-bind="checked: App.game.pokeballs.catchUltraBeast">
+                              <div class="toggler-slider">
+                                  <div class="toggler-knob"></div>
+                              </div>
+                          </label>
+                      </div>
+
+                      <div class="form-group col-md-9 col-6">
+                        <span>Catch Shiny Ultra Beasts</span>
+                        <!--<img class="pokeball-small pokeball-selected" src="assets/images/pokeball/Beastball.svg">✨-->
+                        <i class="bi bi-question-circle mx-1"
+                        data-bind="tooltip: { title: 'Enable this option to catch only Shiny Ultra Beasts', trigger: 'hover', html: true }"></i>
+                      </div>
+                      <div class="form-group col-md-3 col-6">
+                          <label class="form-check-label toggler-wrapper style-1 float-right">
+                              <input class="form-check-input" type="checkbox" id="pokeball-catch-ub-shiny"
+                                  data-bind="checked: App.game.pokeballs.catchUltraBeastShiny">
+                              <div class="toggler-slider">
+                                  <div class="toggler-knob"></div>
+                              </div>
+                          </label>
+                      </div>
+
+                      <div class="form-group col-md-12 text-center" data-bind="text: `Beast Balls remaining: ${App.game.pokeballs.getBallQuantity(GameConstants.Pokeball.Beastball)}`"></div>
+                      <div class="col-12">
+                          <hr style="margin-top:0; border-color:white;"/>
+                      </div>
+                      <!-- /ko -->
+                  </div>
+              </div>
+            </div>
+
+            <!--
+            <div class="col-12 scrolling-div-pokeball ">
+              <div class="pt-3">
+                  <h4 data-bind="text: App.game.pokeballs.selectedSelection()() === -1 ? 'No Poké Ball selected' : ItemList[GameConstants.Pokeball[App.game.pokeballs.selectedSelection()()]].displayName">Pokeball</h4>
+              </div>
+              <div class="row">
+                <div class="col-md-12 col-12">
+                  <div class="row no-gutters justify-content-center">
+                    <div class="row justify-content-center" style="padding:15px;">
+                      <img class="pokeball-small pokeball-selected" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[App.game.pokeballs.selectedSelection()()] + '.svg' }"/>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-12 col-12">
+                  <div class="row no-gutters justify-content-center">
+                    <div class="row justify-content-center" style="padding:15px;"
+                    data-bind="text: App.game.pokeballs.selectedSelection()() === -1 ? 'Do not catch' : App.game.pokeballs.pokeballs[App.game.pokeballs.selectedSelection()()].description">
+                      Description
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            -->
+          </div>
         </div>
       </div>
       <div class="modal-footer">
@@ -96,16 +140,3 @@
     </div>
   </div>
 </div>
-
-<script type="text/html" id="pokeballSelectionTemplate">
-  <td class="text-center">
-    <img class="pokeball-small"
-      data-bind="attr: {src: 'assets/images/pokeball/' + GameConstants.Pokeball[$data.type] + '.svg'}, css: {'pokeball-selected': App.game.pokeballs.selectedSelection()() === $data.type}, tooltip: {title: $data.type === -1 ? 'None' : ItemList[GameConstants.Pokeball[$data.type]].displayName, trigger: 'hover', animation: false, placement: 'bottom'}"/>
-  </td>
-  <td class="align-middle">
-    <span data-bind="text: $data.description"></span>
-  </td>
-  <td class="text-center align-middle">
-    <span data-bind="text: $data.quantity && $data.quantity() ? GameConstants.formatNumber($data.quantity()) : '-', tooltip: $data.quantity && {title: $data.quantity().toLocaleString('en-US'), trigger: 'hover', animation: false, placement: 'left'}"></span>
-  </td>
-</script>
