Pokedex entry width increased
To make new Pumpkaboo name fit in a single line

--- a/src/styles/pokedex.less
+++ b/src/styles/pokedex.less
@@ -54,10 +54,18 @@
 .pokedex-modal {
   max-width: 1250px!important;
 }
-.pokedexEntry .item-icon{
-  padding: 2px;
-  margin: 16px 0;
-  background:rgba(0, 0, 0, 0.5);
+.pokedexEntry {
+  @media (min-width: 768px) {
+    max-width: 100% !important;
+    flex-basis: 18% !important;
+    margin: 8px !important;
+  }
+
+  .item-icon{
+    padding: 2px;
+    margin: 16px 0;
+    background:rgba(0, 0, 0, 0.5);
+  }
 }
 
 #pokedex-filter-container, #pokemon-list{
