--- a/src/components/dungeonView.html
+++ b/src/components/dungeonView.html
@@ -22,25 +22,21 @@
 
                 <!-- ko if: !DungeonBattle.trainer() -->
 
-                <!--If all Pokémon in the dungeon are caught-->
-                <knockout data-bind="if: (!DungeonRunner.dungeonCompleted(DungeonRunner.dungeon, true) && DungeonRunner.dungeonCompleted(DungeonRunner.dungeon, false))">
-                    <img title="You have captured all Pokémon in this dungeon!" class="pokeball-smallest"
-                         src="assets/images/pokeball/Pokeball.svg"/>
-                </knockout>
-
-                <!--If all Pokémon in the dungeon are caught shiny-->
-                <knockout data-bind="if: DungeonRunner.dungeonCompleted(DungeonRunner.dungeon, true)">
-                    <img title="You have captured all Pokémon shiny in this dungeon!"
-                         class="pokeball-smallest"
-                         src="assets/images/pokeball/Pokeball-shiny.svg"/>
-                </knockout>
+                <knockout data-bind="template: { 
+                    name: 'caughtStatusAreaTemplate', 
+                    data: { 
+                        'areaTypeText': 'in this dungeon',
+                        'areaCompleted': DungeonRunner.dungeonCompleted(DungeonRunner.dungeon, false),
+                        'areaCompletedShiny': DungeonRunner.dungeonCompleted(DungeonRunner.dungeon, true)
+                    }
+                }"></knockout>
 
                 <!-- /ko -->
             </knockout>
 
             <!-- ko ifnot: DungeonBattle.trainer() -->
             <knockout class="right" data-bind="css: { 'text-danger': DungeonRunner.timeLeftSeconds() < 20, 'text-primary': DungeonRunner.timeLeftSeconds() >= 20 }">
-                <h4><strong data-bind="text: DungeonRunner.timeLeftSeconds() + 's'"></strong></h4>
+                <h4 class="m-0"><strong data-bind="text: DungeonRunner.timeLeftSeconds() + 's'"></strong></h4>
             </knockout>
             <!-- /ko -->
             <!-- ko if: DungeonBattle.trainer() -->
