--- a/src/components/safariModal.html
+++ b/src/components/safariModal.html
@@ -17,14 +17,14 @@
             <div class="modal-header">
                 <h4 style='text-align:center' class="modal-title">
                     Safari Zone
-                    <span data-bind="if: Safari.completed()">
-                        <img class="pokeball-smallest"
-                            data-bind='attr:{
-                                title:"You have captured all of the Safari Pokémon" + (Safari.completed(true) ? " shiny" : "") + "!",
-                                src:"assets/images/pokeball/Pokeball" + (Safari.completed(true) ? "-shiny" : "") + ".svg"
-                            }'
-                        />
-                    </span>
+                    <knockout data-bind="template: { 
+                        name: 'caughtStatusAreaTemplate', 
+                        data: { 
+                            'areaTypeText': 'in the Safari Zone',
+                            'areaCompleted': Safari.completed(false),
+                            'areaCompletedShiny': Safari.completed(true)
+                        }
+                    }"></knockout>
                 </h4>
                 <button class='btn btn-danger modalClose' onclick='Safari.closeModal()'>Leave</button>
             </div>
