--- a/src/components/battleFrontierView.html
+++ b/src/components/battleFrontierView.html
@@ -8,7 +8,7 @@
             </knockout>
 
             <knockout>
-                <knockout data-bind="html: BattleFrontierBattle.enemyPokemon().name + ' ' + PokemonFactory.genderText(BattleFrontierBattle.enemyPokemon().gender)">Pokémon name</knockout>
+                <knockout data-bind="template: { name: 'pokemonNameTemplate', data: { 'pokemon': BattleFrontierBattle.enemyPokemon() } }">Pokémon name</knockout>
             </knockout>
 
             <knockout class="right" data-bind="html: BattleFrontierRunner.pokemonLeftImages">
